# cloud

./: Cargo.toml  Dockerfile  README.md  architecture.md  todo.md
.github/workflows/: build.yml  ci.yml  docker.yml  release.yml
crates/api/: Cargo.toml
crates/api-common/: Cargo.toml
crates/api-common/bindings/: AllServiceSettings.ts  ApiKey.ts  AppId.ts  Assignment.ts  AssignmentId.ts  AuthorizedServiceHost.ts  BannedAccount.ts  BrowserClientState.ts  ChangeGalleryData.ts  ClientConfig.ts  ClientIDError.ts  ClientId.ts  ClientInfo.ts  ClientState.ts  ClientStateData.ts  CollaborationInvite.ts  CreateAssignmentData.ts  CreateGalleryData.ts  CreateGalleryProjectData.ts  CreateGroupData.ts  CreateLibraryData.ts  CreateMagicLinkData.ts  CreateProjectData.ts  CreateSubmissionData.ts  Credentials.ts  EmailValidator.ts  ExternalClient.ts  ExternalClientState.ts  FriendInvite.ts  FriendLink.ts  FriendLinkState.ts  Gallery.ts  GalleryId.ts  GalleryProjectMetadata.ts  Group.ts  GroupJoinCode.ts  GroupNameValidator.ts  InvitationResponse.ts  InvitationState.ts  JoinCodeRequest.ts  (+57 more)
crates/api-common/src/: bson.rs  error.rs  lib.rs  oauth.rs  test_utils.rs
crates/api/src/: common.rs  core.rs  error.rs  lib.rs
crates/api/src/common/: mod.rs  native.rs  wasm.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  error.rs  main.rs
crates/cloud/: Cargo.toml  README.md  architecture.md  todo.md
crates/cloud-common/: Cargo.toml
crates/cloud-common/src/: lib.rs
crates/cloud/config/: default.toml  local.toml
crates/cloud/src/: collaboration_invites.rs  common.rs  config.rs  errors.rs  friends.rs  groups.rs  libraries.rs  login_helper.rs  main.rs  models.rs  oauth.rs  projects.rs  service_settings.rs  services_hosts.rs  test_utils.rs  users.rs  utils.rs
crates/cloud/src/app_data/: metrics.rs  mod.rs
crates/cloud/src/auth/: collaboration.rs  galleries.rs  groups.rs  hosts.rs  libraries.rs  mod.rs  network.rs  oauth.rs  projects.rs  settings.rs  system.rs  users.rs
crates/cloud/src/collaboration_invites/: actions.rs  mod.rs  routes.rs
crates/cloud/src/friends/: actions.rs  routes.rs
crates/cloud/src/galleries/: actions.rs  routes.rs
crates/cloud/src/groups/: actions.rs  routes.rs
crates/cloud/src/libraries/: actions.rs  routes.rs
crates/cloud/src/magic_links/: actions.rs  email_template.rs  mod.rs  routes.rs
crates/cloud/src/network/: actions.rs  mod.rs  routes.rs
crates/cloud/src/network/topology/: address.rs  client.rs  mod.rs  network.rs
crates/cloud/src/oauth/: actions.rs  html_template.rs  mod.rs  routes.rs
crates/cloud/src/projects/: actions.rs  mod.rs  routes.rs
crates/cloud/src/services/: README.md  hosts.rs  mod.rs  settings.rs
crates/cloud/src/services/hosts/: actions.rs  mod.rs  routes.rs
crates/cloud/src/services/settings/: actions.rs  mod.rs  routes.rs
crates/cloud/src/users/: actions.rs  email_template.rs  html_template.rs  mod.rs  routes.rs  strategies.rs
crates/core/: Cargo.toml
crates/core/src/: bson.rs  lib.rs  oauth.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/migrate/: Cargo.toml
crates/migrate-v1/: Cargo.toml
crates/migrate-v1/config/: default.toml
crates/migrate-v1/src/: main.rs  origin.rs
crates/migrate/config/: default.toml
crates/migrate/src/: config.rs  main.rs  origin.rs
docker/: Dockerfile.cloud  Dockerfile.migrate
src/: app_data.rs  collaboration_invites.rs  config.rs  database.rs  errors.rs  friends.rs  groups.rs  libraries.rs  main.rs  models.rs  network.rs  projects.rs  services_hosts.rs  users.rs
src/app_data/: mod.rs
src/network/: mod.rs
src/network/topology/: address.rs  client.rs  external.rs  mod.rs  network.rs
utils/: degrade-network-linux.sh
