[package]
name = "netsblox-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.11"
serde = "1.0.130"
mongodb = "2.0.0"
futures = "0.3.0"
env_logger = "0.9.0"
rustrict = "0.1.30"
jsonwebtoken = "7"
regex = "1"
lazy_static = "1.4.0"
