[package]
name = "netsblox-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.11"
serde = "1.0.130"
serde_json = "1.0.59"
mongodb = "2.0.0"
futures = "0.3.0"
env_logger = "0.9.0"
rustrict = "0.1.30"
regex = "1"
lazy_static = "1.4.0"
actix-session = "0.5.0-beta.4"
actix-web-actors = "4.0.0-beta.7"
actix = "0.12.0"
sha2 = "0.10.0"
passwords = "3.1.8"
hex = "0.4.3"

[dependencies.uuid]
version = "1.0.0-alpha.1"
features = [
"v4",
"fast-rng",
]