[package]
name = "netsblox-api-common"
version = "1.6.6"
edition = "2021"
license = "MIT"
description = """
A crate containing the types used by the NetsBlox cloud API
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1.0.217", features = ["derive"] }
bson = { version = "2.13.0", optional = true }
derive_more = "0.99.18"
serde_json = "1.0.138"
# TODO: make this a dev dependency or a feature
ts-rs = { version = "7.1", features = ["uuid-impl", "serde-compat"] }

[features]
to_bson = ["bson"]
