[package]
name = "netsblox-api"
version = "1.6.0"
edition = "2021"
license = "MIT"
description = """
A client library for the NetsBlox cloud API
"""

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
reqwest = {version = "0.11.20", features = ["json", "cookies"]}
futures-util = "0.3.19"
derive_more = "0.99.17"
serde_json = "1.0.59"
bytes = "1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
netsblox-api-common = { path = "../api-common", version = "1.6.0" }
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
tungstenite = { version = "0.20.1" }
tokio = { version = "1.0.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
netsblox-api-common = { path = "../api-common", version = "1.6.0" , features = ["wasm"]}
wasm-bindgen = {version = "0.2.92" }
wasm-bindgen-futures = {version = "0.4.42" }
serde-wasm-bindgen = {version = "0.6.5" }
gloo-net = {version = "0.5.0" }
tsify-next = { version = "0.5.3" }
into-jsvalue-derive = "0.2.0"
web-sys = { version = "0.3.69", features = ["WebSocket"]}
getrandom = { version = "0.2.15", features = ["js"]}
