[package]
name = "netsblox-api"
version = "1.6.6"
edition = "2021"
license = "MIT"
description = """
A client library for the NetsBlox cloud API
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.11.27", features = ["json", "cookies"]}
futures-util = "0.3.31"
netsblox-api-common = { path = "../api-common", version = "1.6.6" }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
tungstenite = "0.20.1"
tokio = "1.43.0"
derive_more = "0.99.18"
serde_json = "1.0.138"
