[package]
name = "netsblox-api"
version = "1.6.6"
edition = "2021"
license = "MIT"
description = """
A client library for the NetsBlox cloud API
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json", "cookies"]}
futures-util = "0.3.31"
netsblox-api-common = { path = "../api-common", version = "1.6.6" }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tungstenite = "0.26.1"
tokio = "1.43.0"
derive_more = { version = "1.0.0", features = ["from_str"] }
serde_json = "1.0.138"
