[package]
name = "netsblox-cli"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = """
A command line tool for interacting with the NetsBlox cloud.
"""

[[bin]]
name = "netsblox"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
confy = "0.4.0"
serde = { version = "1.0.130", features = ["derive"] }
inquire = "0.3.0-alpha.1"
reqwest = {version = "0.11.9", features = ["json", "cookies"]}
netsblox-api = { path = "../api", version = "0.3.0" }
futures-util = "0.3.19"
exitcode = "1.1.2"
xmlparser = "0.13.5"
lazy_static = "1.4.0"
derive_more = "0.99.17"
