[package]
name = "netsblox-cli"
version = "1.6.6"
edition = "2021"
license = "MIT"
description = """
A command line tool for interacting with the NetsBlox cloud.
"""

[[bin]]
name = "netsblox"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "serde"] }
clap = { version = "4.5.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
confy = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
inquire = "0.6.2"
reqwest = {version = "0.11.27", features = ["json", "cookies"]}
netsblox-api = { path = "../api", version = "1.6.6" }
futures-util = "0.3.31"
exitcode = "1.1.2"
xmlparser = "0.13.6"
lazy_static = "1.5.0"
derive_more = "0.99.18"
