[package]
name = "netsblox-cloud-common"
version = "1.3.1"
edition = "2021"
license = "MIT"
description = """
A crate containing the types used internally by the NetsBlox cloud (stored in the database)
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
serde_json = "1.0.59"
mongodb = "2.6.1"
passwords = "3.1.8"
netsblox-api-common = { path = "../api-common", version = "1.3.1", features = ["to_bson"] }
uuid = { version = "1.0.0-alpha.1", features = ["v4", "fast-rng"] }
sha2 = "0.10.0"
hex = "0.4.3"
