[package]
name = "netsblox-cloud-common"
version = "1.6.6"
edition = "2021"
license = "MIT"
description = """
A crate containing the types used internally by the NetsBlox cloud (stored in the database)
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.217"
serde_json = "1.0.138"
mongodb = "2.8.2"
passwords = "3.1.16"
netsblox-api-common = { path = "../api-common", version = "1.6.6", features = ["to_bson"] }
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
sha2 = "0.10.8"
hex = "0.4.3"
