[package]
name = "netsblox-cloud"
version = "1.6.6"
edition = "2021"
license = "MIT"
description = """
A cloud server for the NetsBlox programming environment. Provides user/project management and the network overlay for message passing.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.9.0", features = ["cookies"] }
actix-cors = "0.7.0"
serde = "1.0.217"
serde_json = "1.0.138"
mongodb = "3.2.0"
futures = "0.3.31"
env_logger = "0.11.6"
log = "0.4.25"
rustrict = "0.7.33"
regex = "1"
lazy_static = "1.5.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web-actors = "4.3.1"
actix = "0.13.5"
sha2 = "0.10.8"
passwords = "3.1.16"
hex = "0.4.3"
figment = { version = "0.10.19", features = ["toml"]}
itertools = "0.14.0"
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "serde"] }
derive_more = { version = "1.0.0", features = ["from_str"] }
netsblox-cloud-common = { path = "../cloud-common", version = "1.6.6" }
reqwest = {version = "0.12.12", features = ["cookies", "json"]}
lru = "0.13.0"
lettre = {version = "0.11.11", features = ["smtp-transport", "builder"]}
image = "0.25.5"
base64 = "0.22.1"
tokio = { version = "1.43.0", features = ["sync", "time"]}
actix-web-prom = "0.9.0"
prometheus = "0.13.4"
aws-sdk-s3 = "1.71.0"
aws-credential-types = "1.2.1"
aws-config = "1.5.15"
nonempty = "0.11.0"
