[package]
name = "netsblox-migrate"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netsblox-cloud-common = { path = "../cloud-common", version = "0.3.0" }
mongodb = "2.1.0"
serde = "1.0.130"
serde_json = "1.0.59"
tokio = { version = "1", features = ["full"] }
passwords = "3.1.8"
futures = "0.3.0"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
config = "0.11.0"
indicatif = "0.17"
