[package]
name = "netsblox-migrate"
version = "1.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netsblox-cloud-common = { path = "../cloud-common", version = "1.3.1" }
mongodb = "2.6.1"
serde = "1.0.130"
serde_json = "1.0.59"
tokio = { version = "1", features = ["full"] }
passwords = "3.1.8"
futures = "0.3.0"
derive_more = "0.99.17"
config = "0.11.0"
indicatif = "0.17"
clap = { version = "4.4.3", features = ["derive"] }
aws-sdk-s3 = "0.31.2"
aws-credential-types = "0.56.1"
aws-config = "0.56.1"
