[package]
name = "netsblox-migrate"
version = "1.6.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netsblox-cloud-common = { path = "../cloud-common", version = "1.6.6" }
mongodb = "3.2.0"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
passwords = "3.1.16"
futures = "0.3.31"
derive_more = { version = "1.0.0", features = ["from_str"] }
figment = { version = "0.10.19", features = ["toml"]}
indicatif = "0.17"
clap = { version = "4.5.27", features = ["derive"] }
aws-sdk-s3 = "1.71.0"
aws-credential-types = "1.2.1"
aws-config = "1.5.15"
